// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<styled.footer
  className="app-footer"
>
  <a
    href="http://www.rpthreadtracker.com"
  >
    RPThreadTracker
  </a>
   © 
  1989
   
  <a
    href="http://blackjack-software.com"
  >
    Blackjack Software
  </a>
   | Switch to
   
  <button
    data-spec="footer-theme-toggle-button"
    onClick={[MockFunction]}
    onKeyPress={[MockFunction]}
    type="button"
  >
    light theme
  </button>
   
  | Support the tracker on
   
  <a
    href="https://www.patreon.com/bePatron?u=4797959"
    rel="noopener noreferrer"
    target="_blank"
  >
    Patreon
  </a>
  !
  <span
    className="float-right"
  >
    Powered by 
    <a
      href="http://coreui.io"
    >
      CoreUI
    </a>
  </span>
</styled.footer>
`;

exports[`rendering snapshots should render valid snapshot when light theme 1`] = `
<styled.footer
  className="app-footer"
>
  <a
    href="http://www.rpthreadtracker.com"
  >
    RPThreadTracker
  </a>
   © 
  1989
   
  <a
    href="http://blackjack-software.com"
  >
    Blackjack Software
  </a>
   | Switch to
   
  <button
    data-spec="footer-theme-toggle-button"
    onClick={[MockFunction]}
    onKeyPress={[MockFunction]}
    type="button"
  >
    dark theme
  </button>
   
  | Support the tracker on
   
  <a
    href="https://www.patreon.com/bePatron?u=4797959"
    rel="noopener noreferrer"
    target="_blank"
  >
    Patreon
  </a>
  !
  <span
    className="float-right"
  >
    Powered by 
    <a
      href="http://coreui.io"
    >
      CoreUI
    </a>
  </span>
</styled.footer>
`;
